--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <span></span>
 </div>
 <h2 id="clock">00:00:00</h2>
-<h1 class="hidden" id="greeting"></h1>
+    <h1 class="hidden" id="greeting"></h1>
+    <a href="meme.html">Go Meme!</a>
 <form id="todo-form">
     <input type="text" placeholder="Write a To Do and Press Enter" required />
 </form>
