--- a/meme.html
+++ b/meme.html
@@ -35,6 +35,7 @@
     </div>
     <canvas></canvas>
     <div class="btns">
+        <a href="index.html">Go Todo</a>
         <label>Pen-Size🖌️<br>
         <br><input id="line-width", type="range" min="1", max="10"value="5"></label>
 <button id ="mode-btn">DrawMode🎨</button>
@@ -50,7 +51,6 @@
     </select></label>
         <label for="font-size">Font-Size🖍️<br>
         <br><input id="font-size" type="range" min="10", max="50" value="20"></label>
-</div>
 <input type ="text" placeholder="Add text here!" id = "text" />
 </div>
 <div class="btns-2">
@@ -63,7 +63,8 @@
 <label for="file">
     Add Photo📷<input type ="file" accept="img/*" id="file"/>
 </label>
-<button id = "saveimage">Save📂</button></div>
+<button id = "saveimage">Save📂</button>
+</div>
     <script src="js/drawing.js"></script>
 </body>
 </html>
